--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^1.3.0
   image_picker: ^1.1.2
   shared_preferences: ^2.5.3
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
